--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular2-hotkeys": "^0.4.0",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "canvg-fixed": "^1.0.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "d3": "^4.2.7",
