--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "3.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.11",
     "@types/gapi": "0.0.29",
+    "angular2-color-picker": "^1.3.0",
     "angular2-hotkeys": "^0.4.0",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
