--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "normalize.css": "^5.0.0",
     "readline": "^1.3.0",
     "rxjs": "5.0.0-beta.12",
+    "tinycolor2": "^1.4.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
