--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.11",
     "@types/gapi": "0.0.29",
     "angular2-color-picker": "^1.3.0",
+    "angular2-highcharts": "^0.4.1",
     "angular2-hotkeys": "^0.4.0",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "canvg-fixed": "^1.0.0",
+    "chart.js": "^2.4.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "d3": "^4.2.7",
@@ -38,6 +40,7 @@
     "jquery": "^3.1.1",
     "jspdf": "^1.3.2",
     "morgan": "^1.7.0",
+    "ng2-charts": "^1.5.0",
     "node-sass": "^3.10.0",
     "normalize.css": "^5.0.0",
     "readline": "^1.3.0",
