--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.11",
+    "@angular/common": "~2.4.1",
+    "@angular/compiler": "~2.4.1",
+    "@angular/core": "~2.4.1",
+    "@angular/forms": "~2.4.1",
+    "@angular/http": "~2.4.1",
+    "@angular/platform-browser": "~2.4.1",
+    "@angular/platform-browser-dynamic": "~2.4.1",
+    "@angular/router": "~3.4.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.19",
     "@types/gapi": "0.0.29",
     "angular2-color-picker": "^1.3.0",
     "angular2-highcharts": "^0.4.1",
@@ -28,7 +28,6 @@
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "canvg-fixed": "^1.0.0",
-    "chart.js": "^2.4.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "d3": "^4.2.7",
@@ -53,7 +52,7 @@
     "@types/d3": "^3.5.36",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.46",
-    "angular-cli": "1.0.0-beta.16",
+    "angular-cli": "^1.0.0-beta.26",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
